--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "event-db",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/main.ts",
   "scripts": {
     "check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
   }
 }
