--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.11",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
+    "pg": "^8.13.3",
     "typescript": "^5.7.3"
   }
 }
