--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.11",
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
