--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
+    "@types/node": "^22.13.5",
     "@types/pg": "^8.11.11",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
